<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"

    tools:layout_editor_absoluteY="8dp"
    tools:layout_editor_absoluteX="8dp">
    <RelativeLayout
        android:id="@+id/acb"
        android:background="@drawable/bg_home"
        android:layout_width="match_parent"
        android:layout_height="155dp">
    </RelativeLayout>
    <android.support.design.widget.AppBarLayout
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appBarLayout"
        app:elevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar
                app:layout_scrollFlags="scroll|enterAlways"
                app:elevation="0dp"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorAccent"
                />
        </FrameLayout>
    </android.support.design.widget.AppBarLayout>
    <ImageView

        android:padding="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="50dp"
        android:tint="@color/white"
        app:srcCompat="@drawable/ic_email"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/imageView" />
    <LinearLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/imageView">

        <android.support.design.widget.TextInputLayout
            android:layout_marginBottom="10dp"
            android:id="@+id/support_input_layout_email"
            android:theme="@style/textview_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:padding="10dp"
                android:background="@drawable/edit_text_bg"
                android:id="@+id/support_input_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="textEmailAddress"

                android:hint="@string/hint_email" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginBottom="10dp"

            android:id="@+id/support_input_layout_name"
            android:layout_width="match_parent"
            android:theme="@style/textview_login"

            android:layout_height="wrap_content">

            <EditText
                android:padding="10dp"
                android:background="@drawable/edit_text_bg"
                android:id="@+id/support_input_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="text"
                android:hint="@string/hint_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginBottom="10dp"

            android:id="@+id/support_input_layout_message"
            android:layout_width="match_parent"
            android:theme="@style/textview_login"
            android:layout_height="wrap_content">

            <EditText
                android:padding="10dp"
                android:background="@drawable/edit_text_bg"
                android:gravity="top"
                android:lines="4"
                android:id="@+id/support_input_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/hint_message" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_marginTop="10dp"
            android:text="@string/send_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/support_button"
            android:layout_weight="1"
            android:padding="16dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/gradient_dialog_btn"
            android:elevation="1dp" />
    </LinearLayout>
</RelativeLayout>
