<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_user"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layoutDirection="ltr"

    android:layout_height="match_parent"
    tools:context=".ui.Activities.EditActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        app:elevation="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar
                app:elevation="2dp"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                style="@style/ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                />
            <RelativeLayout
                android:background="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout

                android:layout_margin="16dp"
                android:background="@drawable/edit_text_bg"
                android:layout_width="match_parent"
                android:layout_height="200dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/image_view_user_profile"
                    android:padding="8dp"
                    android:src="@drawable/profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />
                <TextView
                    android:id="@+id/text_view_name_user"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:shadowColor="@color/black"
                    android:textSize="10pt"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:textColor="@color/primary_text"
                    android:text="Rahul kumar"
                    android:gravity="center"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginTop="70dp"
                    android:layout_width="60dp"
                    android:layout_height="200dp">
                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/image_view_facebook"
                        android:layout_margin="5dp"
                        android:src="@drawable/ic_facebook"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />
                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/image_view_twitter"
                        android:layout_margin="5dp"
                        android:src="@drawable/ic_twitter"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />
                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/image_view_instagram"
                        android:layout_margin="5dp"
                        android:src="@drawable/ic_instagram"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />
                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/image_view_email"
                        android:layout_margin="5dp"
                        android:src="@drawable/ic_email"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />
                </LinearLayout>
                <RelativeLayout
                    android:id="@+id/relative_layout_follow"
                    android:layout_marginTop="200dp"
                    android:layout_centerHorizontal="true"
                    android:background="@color/white"
                    android:layout_width="120dp"
                    android:layout_height="40dp">

                    <TextView
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/primary_text"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="6pt"
                        android:id="@+id/text_view_follow"
                        android:text="Follow"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </RelativeLayout>

            </RelativeLayout
                >

            <LinearLayout
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/imageView">
                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:id="@+id/edit_input_layout_name"
                    android:layout_width="match_parent"
                    android:theme="@style/textview_login"

                    android:layout_height="wrap_content">

                    <EditText
                        android:padding="10dp"
                        android:layout_height="45dp"
                        android:background="@drawable/edit_text_bg"
                        android:id="@+id/edit_input_name"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:hint="@string/hint_name" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:id="@+id/edit_input_layout_email"
                    android:theme="@style/textview_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:padding="10dp"
                        android:layout_height="45dp"
                        android:background="@drawable/edit_text_bg"
                        android:id="@+id/edit_input_email"
                        android:layout_width="match_parent"
                        android:inputType="textEmailAddress"
                        android:hint="@string/hint_email" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:id="@+id/edit_input_layout_facebook"
                    android:theme="@style/textview_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:padding="10dp"
                        android:layout_height="45dp"
                        android:background="@drawable/edit_text_bg"
                        android:id="@+id/edit_input_facebook"
                        android:layout_width="match_parent"
                        android:inputType="textEmailAddress"
                        android:hint="@string/hint_facebook" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:id="@+id/edit_input_layout_twitter"
                    android:theme="@style/textview_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:padding="10dp"
                        android:layout_height="45dp"
                        android:background="@drawable/edit_text_bg"
                        android:id="@+id/edit_input_twitter"
                        android:layout_width="match_parent"
                        android:inputType="textEmailAddress"
                        android:hint="@string/hint_twitter" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:id="@+id/edit_input_layout_instragram"
                    android:theme="@style/textview_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:padding="10dp"
                        android:layout_height="45dp"
                        android:background="@drawable/edit_text_bg"
                        android:id="@+id/edit_input_instragram"
                        android:layout_width="match_parent"
                        android:inputType="textEmailAddress"
                        android:hint="@string/hint_instragram" />
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:layout_marginTop="10dp"
                    android:background="@drawable/gradient_dialog_btn"
                    android:text="@string/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_button"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:textColor="@color/white"
                    android:elevation="1dp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
